--- a/templates/trip.html
+++ b/templates/trip.html
@@ -1,21 +1,27 @@
-{% extends "base1.html" %}
-
-{% block content %}
+{% extends "base1.html" %} {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('trip_chat', trip_id=trip._id) }}">Chat</a>
+      <a class="nav-link" href="{{ url_for('trip_chat', trip_id=trip._id) }}"
+        >Chat</a
+      >
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('budget', trip_id=trip._id) }}">Budget</a>
+      <a class="nav-link" href="{{ url_for('budget', trip_id=trip._id) }}"
+        >Budget</a
+      >
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{url_for('itinerary', trip_id=trip._id)}}">Itinerary</a>
+      <a class="nav-link" href="{{url_for('itinerary', trip_id=trip._id)}}"
+        >Itinerary</a
+      >
     </li>
   </ul>
   <div class="form-check form-switch">
     <input class="form-check-input" type="checkbox" id="toggleAttractions" />
-    <label class="form-check-label" for="toggleAttractions">Show Attractions</label>
+    <label class="form-check-label" for="toggleAttractions"
+      >Show Attractions</label
+    >
   </div>
   <div class="form-check form-switch">
     <input class="form-check-input" type="checkbox" id="toggleHotels" />
@@ -23,17 +29,14 @@
   </div>
 </nav>
 
-{% with messages = get_flashed_messages(with_categories=True) %}
-{% if messages %}
+{% with messages = get_flashed_messages(with_categories=True) %} {% if messages
+%}
 <div class="flash-messages">
   {% for category, message in messages %}
-  <div class="alert alert-{{ category }}">
-    {{ message }}
-  </div>
+  <div class="alert alert-{{ category }}">{{ message }}</div>
   {% endfor %}
 </div>
-{% endif %}
-{% endwith %}
+{% endif %} {% endwith %}
 
 <h1>{{ trip.trip_name }}</h1>
 <h2>Itinerary</h2>
@@ -53,9 +56,12 @@
     style="margin-bottom: 10px"
   />
   <button onclick="copyInviteCode()">Invite Someone To This Itinerary</button>
- </div>
+</div>
 
- <form action="{{ url_for('itinerary.add_itinerary_item', trip_id=trip._id) }}" method="POST">
+<form
+  action="{{ url_for('itinerary.add_itinerary_item', trip_id=trip._id) }}"
+  method="POST"
+>
   <input type="text" name="activity" placeholder="Activity" required />
   <input type="text" name="location" placeholder="Location" required />
   <input type="datetime-local" name="time" placeholder="Time" required />
@@ -64,9 +70,18 @@
 </form>
 
 <!-- Input field for location autocomplete -->
-<input id="autocomplete" placeholder="Enter a location" type="text" class="form-control" style="width: 300px; margin-bottom: 10px" />
+<input
+  id="autocomplete"
+  placeholder="Enter a location"
+  type="text"
+  class="form-control"
+  style="width: 300px; margin-bottom: 10px"
+/>
 
 <!-- Container for the map -->
+<script>
+  window.RAPIDAPI_KEY = "{{ rapidapi_key }}";
+</script>
 <div id="map" style="height: 500px; width: 100%"></div>
 
 <!-- Table to display restaurants, attractions, and hotels -->
@@ -88,18 +103,12 @@
 <!-- Link to the map.js file -->
 <script src="{{ url_for('static', filename='js/map.js') }}"></script>
 <script>
-function copyInviteLink() {
-  var copyText = document.getElementById("inviteLink");
-  copyText.select();
-  copyText.setSelectionRange(0, 99999); // For mobile devices
-  navigator.clipboard.writeText(copyText.value);
-  alert("Copied the link: " + copyText.value);
-}
+  function copyInviteLink() {
+    var copyText = document.getElementById("inviteLink");
+    copyText.select();
+    copyText.setSelectionRange(0, 99999); // For mobile devices
+    navigator.clipboard.writeText(copyText.value);
+    alert("Copied the link: " + copyText.value);
+  }
 </script>
 {% endblock %}
-
-
-
-
-
-
