--- a/templates/signup.html
+++ b/templates/signup.html
@@ -51,7 +51,7 @@ get_flashed_messages(with_categories=True) %} {% if messages %}
 
   <div class="text-center">
     <button  type="submit" class="btn btn-primary btn-block mb-4">Sign Up</button>
-    <p class="lead">Already signed up? <a href="{{url_for('auth.login')}}">Sign up</a> here</p>
+    <p class="lead">Already signed up? <a href="{{url_for('auth.login')}}">Sign in</a> here</p>
   </div>
 </form>
 
